corrected some mistakes in It and Sp translations

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -57,7 +57,7 @@ ADD\ TO\ FAVOURITES\ LIST=Agregar a la lista de favoritos
 
 ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Agregar nodos secundarios a la lista de favoritos
 
-ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Agregar recursos en masa mediante lista de favoritos 
+ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Agregar recursos en masa mediante lista de favoritos f
 
 ADD\ FROM\ FAVOURITES=Agregar desde la lista de favoritos
 
@@ -151,9 +151,9 @@ PLUGIN\ ERROR=Error en el complemento
 
 COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=No se pudo cargar el complemento: {0}
 
-EDIT\ COLUMN\ VIEWS=Editar vista de columna
+EDIT\ COLUMN\ VIEWS=Editar visualizaci\u00f3n de las columnas
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista de columna para las nuevas tablas
+COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista de las columnas en las nuevas tablas
 
 SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostrar idioma en el nombre de la columna
 
@@ -177,7 +177,7 @@ CHECK\ FOR\ NEW\ VERSION\ ON\ START=Buscar nueva versi\u00f3n durante la ejecuci
 
 SHOW\ STATUS\ BAR=Mostrar barra de estado
 
-SHOW\ SELECTION\ PREVIEW=Mostrar vista previa de la selecci\u00f3n
+SHOW\ SELECTION\ PREVIEW=Mostrar visualizaci\u00f3n previa de la selecci\u00f3n
 
 SAVE\ WINDOWS\ ON\ EXIT=Guardar ventanas al salir de la applicaci\u00f3n
 
@@ -267,7 +267,7 @@ ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE
 DELETE\ {0}\ X\ {1}=Eliminar {1} campo(s) "{0}"
 DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Eliminar {1} atributo(s) "{0}"
 NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=No se encontr\u00f3 ninguna actualizaci\u00f3n, la versi\u00f3n actual es {0}
-SAVE\ CURRENT\ COLUMN\ VIEW=Guardar vista de columna actual
+SAVE\ CURRENT\ COLUMN\ VIEW=Guardar actual visualizaci\u00f3n de las columnas
 HIDE\ COLUMN=Ocultar columna
 ALL\ COLUMNS=Todas las columnas
 THIS\ COLUMN=Esta columna ({0})
@@ -277,10 +277,10 @@ MAKE\ COLUMN\ FIT\ CONTENTS=Ajustar columna a su contenido
 MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Ajustar todas las columnas a sus contenidos
 MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Ajustar todas las columnas al tama\u00f1o de "{0}"
 COPY\ TABLE\ FOR\ WEBSITE=Copiar tabla para sitio web
-COLUMN\ VIEW\ FOR\ THIS\ TABLE=Vista de columna para esta tabla
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Vista de las columnas de esta tabla
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limitar visualizaci\u00f3n a las columnas actuales 
-EDIT\ THIS\ COLUMN\ VIEW=Editar esta vista de columna
-GROUP\ FAVOURITES\ BY\ TYPE=Agrupar favoritos seg\u00fan el tipo 
+EDIT\ THIS\ COLUMN\ VIEW=Editar visualizaci\u00f3n de esta columna
+GROUP\ FAVOURITES\ BY\ TYPE=Agrupar favoritos seg\u00fan tipolog\u00eda
 IMPORT/EXPORT\ FAVOURITES=Importar/exportar favoritos
 FORCE\ TYPE\ CHECKING=Forzar chequeo de tipos
 SHOW\ LOG\ CONSOLE=Mostrar consola del registro
