--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -151,9 +151,9 @@ PLUGIN\ ERROR=Errore di plugin
 
 COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossibile caricare il plugin: {0}
 
-EDIT\ COLUMN\ VIEWS=Modifica visualizzazione a colonne
+EDIT\ COLUMN\ VIEWS=Modifica visualizzazione delle colonne
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione a colonne per nuove tabelle
+COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione colonne per le nuove tabelle
 
 SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
@@ -260,16 +260,16 @@ ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPL
 LOGOUT\ ERROR=Errore durante il logout
 IMPORT/EXPORT\ FAVOURITES=Importa/esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
-EDIT\ THIS\ COLUMN\ VIEW=Modifica questa visualizzazione a colonne
+EDIT\ THIS\ COLUMN\ VIEW=Modifica visualizzazione di questa colonna
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
-COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione delle colonne di questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
 FIXED\ COLUMN\ SIZE=Misura delle colonne fissa
 DELETE\ FIELD\ FROM\ ALL\ NODES=Elimina campo da tutti i nodi
 THIS\ COLUMN=Questa colonna ({0})
 ALL\ COLUMNS=Tutte le colonne
 HIDE\ COLUMN=Nascondi colonna
-SAVE\ CURRENT\ COLUMN\ VIEW=Salva visualizzazione a colonne corrente
+SAVE\ CURRENT\ COLUMN\ VIEW=Salva corrente visualizzazione colonne 
 COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Impossibile ripristinare la versione, nessuna modifica effettuata
 FORCE\ TYPE\ CHECKING=Forza type checking
 MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
