--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -158,10 +158,10 @@ DELETE\ FIELD=Eliminar campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo ''{1}''?
 CANNOT\ DELETE=No se puede eliminar
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno, o m\u00e1s, de los nodos visualizados
-A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una vista de columna con el mismo nombre ya existe, no se ha guardado nada
-SAVE\ COLUMN\ VIEW=Guardar vista de columna
+A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Ya existe un tipo de visualizaci\u00f3n de las columnas con el mismo nombre, no se ha guardado nada
+SAVE\ COLUMN\ VIEW=Guardar visualizaci\u00f3n de las columnas
 ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Insertar un nombre para guardar esta vista de columna como
-EDITING\ CURRENT\ COLUMN\ VIEW=Editando vista de columna actual
+EDITING\ CURRENT\ COLUMN\ VIEW=Editando actual visualizaci\u00f3n de las columnas
 SHOW\ CHILD\ NODES=Mostrar nodos secundarios
 SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Seleccionar el tipo de nodo secundario para mostrar
 FOUND\ %D\ MATCHING\ ROWS=Se han encontrado %d filas coincidentes
