--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -110,8 +110,8 @@ DISCARD\ CHANGES=Ignora modifiche
 DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=L'elenco delle ubicazioni remote verr\u00e0 ripristinato. Tornare al passaggio precedente della procedura guidata?
 SETUP_NO\ LOCATIONS\ SPECIFIED=Nessuna ubicazione specificata
 SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stata specificata nessuna ubicazione. Sei sicuro di voler continuare?
-SETUP_SELECT\ A\ METADATA\ FORMAT=Seleziona un formato per i metadati
-SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Seleziona almeno una delle opzioni prima di continuare
+SETUP_SELECT\ A\ METADATA\ FORMAT=Selezionare un formato per i metadati
+SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Selezionare almeno una delle opzioni prima di continuare
 SETUP_NO\ PROFILES\ SELECTED=Nessuno profilo selezionato
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stato selezionato nessun profilo. Sei sicuro di voler continuare?
 SETUP_CLARIN\ PROFILES=Profili Clarin
@@ -158,10 +158,10 @@ DELETE\ FIELD=Elimina campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare %1$d esempi(o) del campo ''{1}''?
 CANNOT\ DELETE=Impossibile eliminare
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno, o pi\u00f9, dei nodi visualizzati
-A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione a colonne con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
-SAVE\ COLUMN\ VIEW=Salva visualizzazione a colonne
+A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione delle colonne con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
+SAVE\ COLUMN\ VIEW=Salva visualizzazione colonne
 ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione a colonne come
-EDITING\ CURRENT\ COLUMN\ VIEW=Modifica della visualizzazione a colonne corrente in corso
+EDITING\ CURRENT\ COLUMN\ VIEW=Modifica corrente visualizzazione colonne in corso
 SHOW\ CHILD\ NODES=Mostra nodi figli
 SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Seleziona il tipo di nodo figlio da visualizzare
 FOUND\ %D\ MATCHING\ ROWS=Trovate %d righe corrispondenti
