refs #3604 Corrected an issue in the translation process.

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -150,7 +150,7 @@ INSERT\ A\ NEW\ FIELD\ CONFIRM=Neues Feld ''{0}'' in Knoten ''{1}'' einf\u00fcge
 HIGHLIGHT\ MATCHING\ ROWS=Gleiche Zeilen hervorheben
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=Es wurden keine Zeilen ausgew\u00e4hlt
 DELETE\ FIELD=Feld l\u00f6schen
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=%1$d Vorkommen des Feldes ''{1}'' l\u00f6schen?
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?={0} Vorkommen des Feldes ''{1}'' l\u00f6schen?
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Dieses Feld kann nicht von einem oder mehreren der angezeigten Knoten gel\u00f6scht werden.
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Eine Spaltenansicht mit dem gleichen Namen besteht bereits, nichts gespeichert
 SAVE\ COLUMN\ VIEW=Spaltenansicht speichern
