--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -155,7 +155,7 @@ INSERT\ A\ NEW\ FIELD\ CONFIRM=\u00bfInsertar un nuevo campo ''{0}'' dentro del 
 HIGHLIGHT\ MATCHING\ ROWS=Resaltar filas coincidentes
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=Ninguna fila ha sido seleccionada
 DELETE\ FIELD=Eliminar campo
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo ''{1}''?
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar {0} ejemplo(s) del campo ''{1}''?
 CANNOT\ DELETE=No se puede eliminar
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno, o m\u00e1s, de los nodos visualizados
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Ya existe un tipo de visualizaci\u00f3n de las columnas con el mismo nombre, no se ha guardado nada
