--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -155,7 +155,7 @@ INSERT\ A\ NEW\ FIELD\ CONFIRM=Inserire un nuovo campo ''{0}'' nel nodo ''{1}''?
 HIGHLIGHT\ MATCHING\ ROWS=Evidenzia righe corrispondenti
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=Nessuna riga \u00e8 stata selezionata
 DELETE\ FIELD=Elimina campo
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare %1$d esempi(o) del campo ''{1}''?
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare {0} esempi(o) del campo ''{1}''?
 CANNOT\ DELETE=Impossibile eliminare
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno, o pi\u00f9, dei nodi visualizzati
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione delle colonne con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
