refs #3624 Corrected the button labels and the position of the cancel button to make the export box easier to use.

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -272,6 +272,8 @@ ATTRIBUTE\ OF\ {0}=Attribute of {0}
 REPLACE\ EXISTING\ LOCATION?=Replace existing location?
 NEW\ LOCATION=New location
 REPLACE=Replace
+OVERWRITE=Overwrite
+MAKECOPY=Make copy
 OVERWRITE\ FILE?=Overwrite file?
 THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n{0}\n\n Overwrite?
 DETAILS=Details
