--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/version.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/version.properties
@@ -18,7 +18,7 @@
 
 plugin.majorVersion=${arbil.majorVersion}
 plugin.minorVersion=${arbil.minorVersion}
-plugin.buildVersion=${plugin.version.committedRevision}
-plugin.lastCommitDate=${plugin.version.committedDate}
-plugin.compileDate=${plugin.build-date}
+plugin.buildVersion=${application.buildVersion}
+plugin.lastCommitDate=${application.lastCommitDate}
+plugin.compileDate=${application.buildDate}
 plugin.projectVersion=${project.version}
