Corrected a translation formatting error.

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -148,7 +148,7 @@ TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Two fields of the same nam
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Inconsistent number of columns in the data to paste.\nThe pasted data could be incorrect.
 INCORRECT\ DATA\ TO\ PASTE=Incorrect data to paste.\nThe data must be copied either from a table with a single node\nor by selecting individual cells in the table.
 PASTE=Paste
-FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=%d fields will be overwritten with the single value on the clipboard.\nContinue?
+FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD={0} fields will be overwritten with the single value on the clipboard.\nContinue?
 SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=showing header menu for column {}
 NO\ ROWS\ SELECTED=No rows selected
 PASTE\ INTO\ TABLE=Paste into Table
