translated two missing strings and corrected a typo

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -57,7 +57,7 @@ ADD\ TO\ FAVOURITES\ LIST=Agregar a la lista de favoritos
 
 ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Agregar nodos secundarios a la lista de favoritos
 
-ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Agregar recursos en masa mediante lista de favoritos f
+ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Agregar recursos en masa mediante lista de favoritos
 
 ADD\ FROM\ FAVOURITES=Agregar desde la lista de favoritos
 
