--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -351,3 +351,5 @@ CANNOT\ COPY\ {0}\ TO\ {1}="Kann ''{0}'' nicht nach ''{1}'' kopieren"
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Mehr Resultate gefunden als angezeigt werden k\u00f6nnen, nur die ersten {0} Ergebnisse werden angezeigt.
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Kann "{0}" nicht suchen, da es \u00fcber keinen Archivhandle verf\u00fcgt
 DELETE\ FROM\ PARENT=Von Elternknoten l\u00f6schen
+OVERWRITE=\u00dcberschreiben
+MAKECOPY=Kopie erstellen
