--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -354,3 +354,5 @@ DELETE\ FROM\ PARENT=Eliminar de nodo primario
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n de I/O al leer el contenido de la Gu\u00eda</strong></p>
 XSDCHECKER=Chequeador de XSD
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo Descripci\u00f3n (IMDI)
+MAKECOPY=Crear copia
+OVERWRITE=Sobrescribir
