--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -354,3 +354,5 @@ EXPORT_FROM\:\ =Da:
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione di I/O durante la lettura del contenuto della Guida</strong></p>
 XSDCHECKER=XSD checker 
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo Descrizione (IMDI)
+MAKECOPY=Crea copia
+OVERWRITE=Sovrascrivi
