added changes from SVN <https://svn.mpi.nl/LAT/Arbil/branches/arbil.2.6.x> 43640:44557

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -275,7 +275,7 @@ REPLACE=Replace
 OVERWRITE=Overwrite
 MAKECOPY=Make copy
 OVERWRITE\ FILE?=Overwrite file?
-THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n{0}\n\n Overwrite?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n{0}\n\n Overwrite? Choose 'No' to skip and keep the original.
 DETAILS=Details
 PERFORMCOPY=performCopy
 DETAILS\ >\ >=Details > >
@@ -292,6 +292,7 @@ IMPORT_EXPORT_STOP=Stop
 IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Shibboleth authentication via the SURFnet method
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limit Characters in File Names (LAMUS friendly format)
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rename Metadata Files (to match local corpus tree names)
+EXPORT_CONVERT_IMDI_CMDI=Convert exported IMDI to CMDI
 EXPORT_TO\:\ =To: 
 EXPORT_FROM\:\ =From: 
 SHOW\ ERRORS\ IN\ TABLE=Show errors in table
@@ -374,3 +375,7 @@ CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot se
 DELETE\ FROM\ PARENT=Delete from parent
 #{0} is number of locations that failed to load
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to load {0} locations. See error log for details.
+#Dialogue message
+UPDATE\ REMOTE\ LOCATIONS=The following updated remote locations are available. Do you want to update the locations in Arbil?
+#Dialogue title
+UPDATE\ REMOTE\ LOCATIONS\ TITLE=Update remote locations?
