--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -353,3 +353,5 @@ CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Kann "{0}
 DELETE\ FROM\ PARENT=Von Elternknoten l\u00f6schen
 OVERWRITE=\u00dcberschreiben
 MAKECOPY=Kopie erstellen
+UPDATE\ REMOTE\ LOCATIONS=Die folgenden Entfernten Speicherorte wurden upgedatet. Wollen Sie dieses Update in Arbil \u00fcbernehmen?
+UPDATE\ REMOTE\ LOCATIONS\ TITLE=Entfernte Speicherorte Updaten?
