--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -356,3 +356,5 @@ XSDCHECKER=Chequeador de XSD
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo Descripci\u00f3n (IMDI)
 MAKECOPY=Crear copia
 OVERWRITE=Sobrescribir
+UPDATE\ REMOTE\ LOCATIONS=Las siguientes ubicaciones remotas se han actualizado.\u00bfQuieres actualizar las ubicaciones en Arbil?
+UPDATE\ REMOTE\ LOCATIONS\ TITLE=\u00bfActualizar ubicaciones remotas?
