--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -356,3 +356,5 @@ XSDCHECKER=XSD checker
 LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo Descrizione (IMDI)
 MAKECOPY=Crea copia
 OVERWRITE=Sovrascrivi
+UPDATE\ REMOTE\ LOCATIONS=Le seguenti ubicazioni remote sono state aggiornate. Vuoi aggiornare le ubicazioni in Arbil?\n
+UPDATE\ REMOTE\ LOCATIONS\ TITLE=Aggiorna ubicazioni remote?
