added DE, some ES and even fewer IT translations for new resource strings

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -298,3 +298,5 @@ MENU_INCREASE_FONT_SIZE=Gr\u00f6\u00dfere Schriftart
 MENU_DECREASE_FONT_SIZE=Kleinere Schriftart
 MENU_RESET_FONT_SIZE=Gr\u00f6\u00dfe der Schriftart einstellen
 MENU_VIEW=Ansicht 
+STORE\ LOCAL\ URI\ FOR\ CMDI\ RESOURCE\ REFERENCES=lokalen Pfad f\u00fcr CMDI-Ressourcen-Referenzen speichern
+STORE\ LOCAL\ URI\ FOR\ CMDI\ RESOURCE\ REFERENCES\ TOOLTIP=Archiv/Lamus-Erweiterung f\u00fcr CMDI: falls aktiviert, f\u00fcgt dies beim Export ein 'localURI'-Attribut zu allen Ressourcen-Referenzen in Metadaten-Dateien hinzu; Bitte beachten Sie, dass dieses Attribut nicht univsersell unterst\u00fctzt wird und daf\u00fcr sorgen kann, dass Ihre CMDI-Dateien in bestimmten Kontexten als ung\u00fcltig angesehen werden
