--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -297,3 +297,4 @@ MENU_INCREASE_FONT_SIZE=Fuente m\u00e1s grande
 MENU_DECREASE_FONT_SIZE=Fuente m\u00e1s peque\u00f1a
 MENU_RESET_FONT_SIZE=Restablecer tama\u00f1o de fuente
 MENU_VIEW=Ver
+STORE\ LOCAL\ URI\ FOR\ CMDI\ RESOURCE\ REFERENCES=Guardar ubicaci\u00f3n local para referencias de recursos para CMDI
