--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -333,7 +333,7 @@ LOADING\ ERROR=Fehler beim Ladevorgang
 ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Fehler beim Hinzuf\u00fcgen von Knoten, Laden der Datei konnte nicht abgewartet werden
 NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Knoten dieses Typs k\u00f6nnen zurzeit noch nicht eingef\u00fcgt werden
 PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Eingef\u00fcgte Zeichenfolge ist keine IMDI-Datei
-THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Die Zieldati befindet sich nicht im Zwischenspeicher
+THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Die Zieldatei befindet sich nicht im Zwischenspeicher
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Session-Unterknoten k\u00f6nnen nicht in Korpus-Knoten eingef\u00fcgt werden
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Datei des Zielknotens besteht nicht
 COPYING\ WITH\ UNSAVED\ CHANGES=Kopieren mit nicht gespeicherten \u00c4nderungen
@@ -355,3 +355,4 @@ OVERWRITE=\u00dcberschreiben
 MAKECOPY=Kopie erstellen
 UPDATE\ REMOTE\ LOCATIONS=Die folgenden Entfernten Speicherorte wurden upgedatet. Wollen Sie dieses Update in Arbil \u00fcbernehmen?
 UPDATE\ REMOTE\ LOCATIONS\ TITLE=Entfernte Speicherorte Updaten?
+EXPORT_CONVERT_IMDI_CMDI=Exportiere IMDI-Dateien nach CMDI konvertieren
