--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -358,3 +358,4 @@ MAKECOPY=Crear copia
 OVERWRITE=Sobrescribir
 UPDATE\ REMOTE\ LOCATIONS=Las siguientes ubicaciones remotas se han actualizado.\u00bfQuieres actualizar las ubicaciones en Arbil?
 UPDATE\ REMOTE\ LOCATIONS\ TITLE=\u00bfActualizar ubicaciones remotas?
+EXPORT_CONVERT_IMDI_CMDI=Convertir IMDI a CMDI
