--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -358,3 +358,4 @@ MAKECOPY=Crea copia
 OVERWRITE=Sovrascrivi
 UPDATE\ REMOTE\ LOCATIONS=Le seguenti ubicazioni remote sono state aggiornate. Vuoi aggiornare le ubicazioni in Arbil?\n
 UPDATE\ REMOTE\ LOCATIONS\ TITLE=Aggiorna ubicazioni remote?
+EXPORT_CONVERT_IMDI_CMDI=Convertire IMDI in CMDI
